HEAD
	+ userExists and groupExists discriminates between shown objects and
	  objects hid by SID
3.2.1
	+ Fixed wrong path in ExternalAD::connectWithKerberos
	+ Update names in tree view when either user or contact is edited
	+ Fixed wizard error when setting external AD mode
	+ Fixed EBox::Users::groupDn method
	+ In contact edition do not store full name in cn but use
	  givenname and sn to get fullname.
	+ Use paginated search when getting children nodes in LdapObject
	+ UTF8 decode DN when retrieving it from a LDAP object
	+ Fixed cloud-sync script
3.2
	+ Set version to 3.2
	+ Add objectClass shadowAccount in 3.0 migration to fix disabled accounts
3.1.11
	+ Added migration code to be sure that we have all users added as members
	  of __USERS__ group on OpenLDAP.
	+ Fixed user creation to make all users belong to __USERS__ group
3.1.10
	+ Do not crash when deleting a group if LDB object does not exist
	+ Do not try to migrate from 3.0 if module is not configured
	+ Override daemons when migrating from 3.0
3.1.9
	+ Fix typo in setSecurityGroup when no GID is set yet
	+ Show group in slave as read-only
	+ Show in a slave when the user is not a member of any group
	+ Check email address for a group is done
	+ Add group dialog can now set the e-mail
	+ Master/Slave synchronisation works again
3.1.8
	+ Enable upgrade from 3.0 in initialSetup
	+ Fixed wrong calls to isSystem() in master-slave after API changes
	+ Fix regression trying to join slave after external AD changes
	+ Fix regression in slave host address after nginx integration
	+ Throw DataExists error when adding an OU which already exists
3.1.7
	+ Readded memberUid to the fields to index for SLAPD.
	+ Ignored members that are not valid perl objects to avoid undef entries
	  on EBox::Users::Group::members method.
	+ Rewrites to share more code with samba module.
	+ Added 'mail' field on zentyalDistributionGroup schema.
	+ Added E-Mail field for Users and Groups when managing them from the UI.